header tag was messing with height spacing of elements on narrow screens, preventing the log out button from working.

--- a/neuroscout/frontend/src/App.css
+++ b/neuroscout/frontend/src/App.css
@@ -25,6 +25,10 @@
   to { transform: rotate(360deg); }
 }
 
+.Login-col {
+  float: right;
+}
+
 body {
     background-color: white;
 }
